<resources>
    <string name="app_name">ReachN\'Do</string>

    <string name="in">Entry</string>
    <string name="out">Exit</string>

    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_next">Next</string>
    <string name="action_back">Back</string>
    <string name="action_conclude">Conclude</string>

    <string name="sms_picker_contacts_warning">Add some contacts first</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="none_locations">No locations</string>
    <string name="sub_none_locations">Hit the + button to set up a location</string>

    <string name="none_events">No events at this location</string>
    <string name="sub_none_events">Hit the \"Add event\" button</string>

    <string name="action_add_event">New event</string>
    <string name="action_add_locations">New location</string>

    <string name="in_out_picker_dialog_title">When?</string>
    <string name="in_out_picker_dialog_in">Location entry</string>
    <string name="in_out_picker_dialog_out">Location exit</string>

    <string name="location_picker_warning_title">Warning</string>
    <string name="location_picker_warning_name_content">The name field is empty, please complete it!</string>
    <string name="location_picker_warning_radius_content">The radius field is empty, please complete it!</string>

    <string name="event_picker_dialog_remind">Remind me</string>
    <string name="event_picker_dialog_sms">Send SMS</string>
    <string name="event_picker_dialog_sound_profile">Change sound profile</string>
    <string name="event_picker_dialog_wifi">Change WiFi profile</string>
    <string name="event_picker_dialog_bluetooth">Change Bluetooth profile</string>
    <string name="event_picker_dialog_mobile_data">Change Mobile Data profile</string>
    <string name="event_picker_dialog_title">Pick an event</string>

    <string name="wifi_picker_dialog_title">WiFi</string>
    <string name="wifi_picker_dialog_on">Turn on</string>
    <string name="wifi_picker_dialog_off">Turn off</string>
    <string name="wifi_picker_dialog_warning">You can\'t add another Wifi event at this location</string>

    <string name="wifi_on_dialog_title">No internet connection</string>
    <string name="wifi_on_dialog_warning">You can\'t add a location without an internet connection, do you want to turn on the WiFi?</string>

    <string name="location_on_dialog_title">Location service is disabled</string>
    <string name="location_on_dialog_warning">It will be easier to add a nearby location with the location service enabled, do you want to turn it on?</string>

    <string name="bluetooth_picker_dialog_title">Bluetooth</string>
    <string name="bluetooth_picker_dialog_on">Turn on</string>
    <string name="bluetooth_picker_dialog_off">Turn off</string>
    <string name="bluetooth_picker_dialog_warning">You can\'t add another Bluetooth event at this location</string>

    <string name="mobile_data_picker_dialog_title">Mobile Data</string>
    <string name="mobile_data_picker_dialog_on">Turn on</string>
    <string name="mobile_data_picker_dialog_off">Turn off</string>
    <string name="mobile_data_picker_dialog_warning">You can\'t add another Mobile Data event at this location</string>

    <string name="reminder_dialog_title">Reminder</string>
    <string name="reminder_dialog_hint">Description</string>
    <string name="reminder_dialog_warning">Write some text please</string>

    <string name="alarm_dialog_title">Alarm</string>
    <string name="alarm_dialog_text_hint">Description</string>
    <string name="alarm_dialog_warning">Write some text please</string>

    <string name="sms_dialog_title">Message</string>
    <string name="sms_dialog_name_hint">Contact name or number</string>
    <string name="sms_dialog_text_hint">Message text</string>
    <string name="sms_dialog_text_info">Text:</string>
    <string name="sms_dialog_contact_empty_alert_title">Empty message</string>
    <string name="sms_dialog_contact_empty_alert_txt">Are you sure you want send an empty message?</string>

    <string name="sound_profile_picker_dialog_title">Sound profile</string>
    <string name="sound_profile_picker_dialog_silent">Silent</string>
    <string name="sound_profile_picker_dialog_vibrate">Vibrate</string>
    <string name="sound_profile_picker_dialog_normal">Normal</string>
    <string name="sound_profile_picker_dialog_warning">You can\'t add another Sound Profile event at this location</string>

    <string name="sound_profile_picker_dialog_change">Change to</string>


    <string name="event_message_to">Message to </string>

    <string name="no_locations_saved">You can\'t add an event because there is no saved locations</string>
    <string name="no_locations">No locations</string>

    <string name="remove_warning_title">Remove</string>
    <string name="remove_warning_content">Are you sure you want remove this location?</string>

    <string name="selection_warning">Please, make a valid selection</string>

    <string name="default_location">Default</string>

    <string name="location_picker_title">New Location</string>

    <string name="location_picker_name">Location Name</string>
    <string name="location_picker_radius">Radius in meters</string>

    <string name="action_settings">Settings</string>
    <string name="about">About</string>

    <string name="developers">©2016 Developed by Pedro Fraga, João Nogueira, Marta Lopes and Francisco Rodrigues</string>

    <string name="version">Version</string>
    <string name="app">App</string>

</resources>
