<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/developers">
        <Preference
            android:summary="Pedro Fraga"
            />
        <Preference
            android:summary="João Nogueira"
            />
        <Preference
            android:summary="Marta Lopes"
            />
        <Preference
            android:summary="Francisco Rodrigues"
            />
        <Preference android:summary="Somos estudantes do Mestrado Integrado em Engenhari Informática e Computação na Faculdade de Engenharia da Universidade do Porto" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/app">
        <Preference
            android:key="pref_about_build"
            android:title="@string/version"
            android:summary="@string/versionName" />
    </PreferenceCategory>
</PreferenceScreen>